--- a/profile/pipeline_parameters.yaml
+++ b/profile/pipeline_parameters.yaml
@@ -67,3 +67,5 @@ threads:
 typingtool_http:
     NoV_TT_http: https://www.rivm.nl/mpf/typingservice/norovirus
     EV_TT_http: https://www.rivm.nl/mpf/typingservice/enterovirus
+
+remove_temp: 1 # For development and debug only. If you set this to no you will keep the HuGo alignment data --> Patient privacy concern.
