--- a/profile/pipeline_parameters.yaml
+++ b/profile/pipeline_parameters.yaml
@@ -46,6 +46,7 @@ databases: # Location of NT, NR and TaxDB are stored via an alias in your home d
     virusHostDB: /mnt/db/Virus-Host_interaction_DB/virushostdb.tsv # Location of the Virus-Host interaction database, see http://www.genome.jp/virushostdb/note.html
     NCBI_new_taxdump_rankedlineage: /mnt/db/new_taxdump/rankedlineage.dmp.delim # Location of the NCBI's "new_taxdump" file "rankedlineage.dmp", see ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump/
     NCBI_new_taxdump_host: /mnt/db/new_taxdump/host.dmp.delim # Location of the NCBI's "new_taxdump" file "host.dmp", see ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump/
+#    BLAST_ncbirc: ~/.ncbirc
 
 server_info: # This is used for IGVjs, discuss this with your IT department, depends on your local setup
     http_adress: http://rivm-biohn-l01p.rivm.ssc-campus.nl
