added explanation comment for r-base in conda env

--- a/envs/scaffold_analyses.yaml
+++ b/envs/scaffold_analyses.yaml
@@ -14,4 +14,4 @@ dependencies:
     - bedtools==2.27.1
     - gawk==4.2.1
     - igvtools==2.3.93
-    - r-base==3.5.1
+    - r-base==3.5.1 # r-base is sometimes required for picard to run. this isn't listed in the picard dependency list.
