--- a/profile/pipeline_parameters.yaml
+++ b/profile/pipeline_parameters.yaml
@@ -68,4 +68,4 @@ threads:
     Fragment_length_analysis: 4
     quantify_output: 4
 
-remove_temp: 1 # For development and debug only. If you set this to 0 you will keep the HuGo alignment data which leads to patient privacy concern.
+remove_temp: 1 # For development and debug only. If you set this to 0 you will keep the HuGo alignment data which can lead to patient privacy concerns.
