--- a/profile/pipeline_parameters.yaml
+++ b/profile/pipeline_parameters.yaml
@@ -3,19 +3,29 @@
 ######################################
 
 Trimmomatic:
-    adapter_removal_config: ILLUMINACLIP:files/trimmomatic_0.36_adapters_lists/NexteraPE-PE.fa:2:30:10:8:true # For the Nextera PE lib prep adapters
-    quality_trimming_config: SLIDINGWINDOW:5:30 # Default: 5 nucleotides window size, minimum average Phred score of 30
-    minimum_length_config: MINLEN:50 # Default: Remove anything smaller than 50 nucleotides
+    # For the Nextera PE lib prep adapters
+    adapter_removal_config: ILLUMINACLIP:files/trimmomatic_0.36_adapters_lists/NexteraPE-PE.fa:2:30:10:8:true
+    # ! test settings for best "relaxed" mode
+    # Default: 5 nucleotides window size, minimum average Phred score of 30
+    quality_trimming_config: SLIDINGWINDOW:5:20
+    # Default: Remove anything smaller than 50 nucleotides
+    minimum_length_config: MINLEN:50
     
 HuGo_removal:
-    alignment_type: --local # Choose if you want to do "local" or "global" alignment. Keep this as "--local" unless you know what you're doing.
+    # Choose if you want to do "local" or "global" alignment. Keep this as "--local" unless you know what you're doing.
+    alignment_type: --local
 
 SPAdes:
-    kmersizes: 21,33,55,77 # uncomment this line if you want to use the pipeline for short Illumina reads (<250 nt in length). Then also comment the line below.
-#    kmersizes: 21,33,55,77,99,127 # uncomment this line if you want to use the pipeline for longer Illumina reads (>250 nt in length). Then also comment the line above.
+    # TODO: kmersizes kunnen waarschijnlijk worden verwijderd, moet getest worden.
+    # uncomment this line if you want to use the pipeline for short Illumina reads (<250 nt in length). Then also comment the line below.
+    kmersizes: 21,33,55,77
+    # uncomment this line if you want to use the pipeline for longer Illumina reads (>250 nt in length). Then also comment the line above.
+#    kmersizes: 21,33,55,77,99,127
 
 scaffold_minLen_filter:
-    minlen: 500 # Minimum allowed scaffold size to be allowed for downstream processessing. Advice, use a minimum length that is atleast 1nt greater than your Illumina read length
+    # ! test settings for best "relaxed" mode
+    # Minimum allowed scaffold size to be allowed for downstream processessing. Advice, use a minimum length that is atleast 1nt greater than your Illumina read length
+    minlen: 250
 
 taxonomic_classification: # NT database is hardcoded for now
     evalue: 0.05 # E-value threshold for saving hits
@@ -25,7 +35,7 @@ taxonomic_classification_LCA:
     bitscoreDeltaLCA: 5 # Every taxonomic hit within this bitscore distance will be used in the LCA analysis.
 
 SNP_calling:
-    max_cov: 20000 # Maximum coverage that will be used for SNP calling. Don't change this value unless you know what you're doing.
+    max_cov: 20000 # Maximum coverage that will be used for SNP calling. Dont change this value unless you know what youre doing.
     minimum_AF: 0.05 # This is the minimum allelle frequency (=AF) for which you want a SNP to be reported. Default is 5%.
 
 ORF_prediction:
@@ -47,12 +57,14 @@ databases: # Location of NT, NR and TaxDB are stored via an alias in your home d
     Krona_taxonomy: /mnt/db/taxonomy_krona/
     # Location of the Virus-Host interaction database, see http://www.genome.jp/virushostdb/note.html
     virusHostDB: /mnt/db/Virus-Host_interaction_DB/virushostdb.tsv
-    # Location of the NCBI's "new_taxdump" file "rankedlineage.dmp", see ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump/
+    # Location of the NCBIs "new_taxdump" file "rankedlineage.dmp", see ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump/
     NCBI_new_taxdump_rankedlineage: /mnt/db/new_taxdump/rankedlineage.dmp.delim
-    # Location of the NCBI's "new_taxdump" file "host.dmp", see ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump/
+    # Location of the NCBIs "new_taxdump" file "host.dmp", see ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/new_taxdump/
     NCBI_new_taxdump_host: /mnt/db/new_taxdump/host.dmp.delim
 
 server_info: # This is used for IGVjs, discuss this with your IT department, depends on your local setup
+    # ? kan deze ook semi-flexibel? I.e. automatisch invullen naar de juiste poort als nginx al draait op een systeem?
+    # ? Kan gecheckt worden met netstat -tulpn | grep nginx
     port: 8083
 
 ######################################
