--- a/envs/scaffold_analyses.yaml
+++ b/envs/scaffold_analyses.yaml
@@ -15,3 +15,4 @@ dependencies:
     - gawk==4.2.1
     - igvtools==2.3.93
     - r-base==3.5.1 # r-base is sometimes required for picard to run. this isn't listed in the picard dependency list.
+    - openjdk==8.0.152 # 2019-Aug: Apparently Picard isn't tested for JDK versions higher than 8. This isn't specified properly in the dependencies and causes errors if not specifically downgraded.
