Remove heatmap index

--- a/profile/pipeline_parameters.yaml
+++ b/profile/pipeline_parameters.yaml
@@ -51,7 +51,6 @@ ORF_prediction:
 
 HTML_index_titles:
     IGVjs_title: "Interactive genome viewers for all samples in this run:"
-    heatmap_title: "Interactive heatmaps of different taxonomic levels for all samples in this run:"
 
 server_info: # This is used for IGVjs, discuss this with your IT department, depends on your local setup
     # ? kan deze ook semi-flexibel? I.e. automatisch invullen naar de juiste poort als nginx al draait op een systeem?
@@ -73,3 +72,9 @@ threads:
 
 remove_temp: 1 # For development and debug only. If you set this to 0 you will keep the HuGo alignment data which can lead to patient privacy concerns.ssss
 
+databases:
+    background_ref: /mnt/db/Reference_genomes/Homo_sapiens/NCBI/GRCh38/Sequence/Bowtie2Index_without_EBV_virus_chr/genome.fa
+    Krona_taxonomy: /mnt/db/taxonomy_krona/
+    virusHostDB: /mnt/db/Virus-Host_interaction_DB/virushostdb.tsv
+    NCBI_new_taxdump_rankedlineage: /mnt/db/new_taxdump/rankedlineage.dmp.delim
+    NCBI_new_taxdump_host: /mnt/db/new_taxdump/host.dmp.delim
