--- a/config/pipeline_parameters.yaml
+++ b/config/pipeline_parameters.yaml
@@ -33,10 +33,10 @@ taxonomic_classification: # NT database is hardcoded for now
     max_hsps: 1 # Maximum number of hits per targets sequence.
 
 taxonomic_classification_LCA:
-    Krona: true
+    Krona: False
     Krona_LCA: 
         bitscoreDeltaLCA: 5 # Every taxonomic hit within this bitscore distance will be used in the LCA analysis.
-    mgkit: False
+    mgkit: true
     mgkit_LCA:
         quantile_threshold: .97
         bitscore_threshold: 100
