--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,19 @@ bin/software/
 data/
 infra/
 logs/
+reference_alignment/
 raw_data/
 results/
 undetermined_demultiplex_data/
 jovian_*
-sample_sheet.yaml
+sample_sheet*
 backup*
 DELME*
+delme*
+*.fa
+*.fasta
+*.stderr
+*.stdout
 LSF_Snakemake.*
 private_*
 .github/
