Updated the wrapper, start it with `bash jovian -ra reference.fasta`. N.B. requires a previously completed Jovian analysis to function. The ordering of the wrapper is still a bit messy, will improve later.
Also removed the samples_sheet information from the config.yaml and placed it in the pipeline_parameters.yaml.

Lets keep config.yaml only for snakemake variables from now on.

--- a/bin/Snakefile
+++ b/bin/Snakefile
@@ -34,7 +34,7 @@ import yaml
 yaml.warnings({'YAMLLoadWarning': False}) # Suppress yaml "unsafe" warnings.
 
 SAMPLES = {}
-with open(config["sample_sheet"]) as sample_sheet_file:
+with open(config["sample_sheet_core"]) as sample_sheet_file:
     SAMPLES = yaml.load(sample_sheet_file) # SAMPLES is a dict with sample in the form sample > read number > file. E.g.: SAMPLES["sample_1"]["R1"] = "x_R1.gz"
 
 #@################################################################################
