Integrated the RA.smk to the QC and cleaning rules of the core workflow. The seperate sample_sheet.sh can now be removed. Also added a multiQC report, it's still a bit dirty since the names of files in the report are a bit wonky, see the TODO comments in the code. The wrapper still needs to be cleaned up to this new situation.
I found something weird/bug, the GC content track in IGVjs is no longer visible. Dito in the core workflow, this used to work... TODO for later.

I've also outcommented the read-length checker. Need to reactivate later. We also need to reduce the runtime of this script, takes too long.

--- a/bin/Snakefile
+++ b/bin/Snakefile
@@ -34,7 +34,7 @@ import yaml
 yaml.warnings({'YAMLLoadWarning': False}) # Suppress yaml "unsafe" warnings.
 
 SAMPLES = {}
-with open(config["sample_sheet_core"]) as sample_sheet_file:
+with open(config["sample_sheet"]) as sample_sheet_file:
     SAMPLES = yaml.load(sample_sheet_file) # SAMPLES is a dict with sample in the form sample > read number > file. E.g.: SAMPLES["sample_1"]["R1"] = "x_R1.gz"
 
 #@################################################################################
@@ -255,4 +255,7 @@ rule all:
         "results/heatmaps/Phage_heatmap.html", # Phage order|family|genus|species heatmaps for the entire run (based on a selection of phage families)
         "results/heatmaps/Bacteria_heatmap.html", # Bacteria phylum|class|order|family|genus|species level heatmap for the entire run
         expand("results/{file}.html", file = [ 'multiqc', 'krona' ]), # HTML Reports
-        expand("data/html/js-end.ok"),
+        expand("data/html/js-end.ok")
+        #! is die expand hierboven nodig?
+        #! moet hier ook geen results/igv.html komen te staan?
+
