--- a/bin/envs/Jovian_master_environment.yaml
+++ b/bin/envs/Jovian_master_environment.yaml
@@ -24,3 +24,6 @@ dependencies:
   - gawk==5.0.0
   - pigz==2.3.4
   - pv==1.6.6
+  - pip==19.2.3
+  - pip:
+    - PyYAML==5.3.1  # otherwise you get a random "missing yaml module" error from the python scripts. Unclear why, since it should be installed above... It's a random error, irreproducible, but it seems like this fixes it.
