--- a/bin/envs/QC_and_clean.yaml
+++ b/bin/envs/QC_and_clean.yaml
@@ -6,4 +6,4 @@ channels:
 dependencies:
     - fastqc==0.11.8
     - trimmomatic==0.38
-    - openjdk==9.0.7 # Added 20190131: with openjdk version 11.* you get fatal "SIGILL" java errors.
+    - openjdk==10.0.2 # See issue #135 on github: https://github.com/DennisSchmitz/Jovian/issues/135
