Added manual cluster-queue override command

--- a/.env
+++ b/.env
@@ -36,6 +36,8 @@ SKIP_CONFIRMATION="FALSE"
 SNAKEMAKE_UNLOCK="FALSE"
 JOVIAN_UPDATE="FALSE"
 CHANGE_VERSION="FALSE"
+QUEUE_NAME_OVERRIDE="FALSE"
+QUEUE_NAME_REPLACEMENT="DEFAULT"
 
 
 ## database installer vars
